Fixed filter input label glitch
-Also changed the appearance of node labels. Labels now have Arial Black
font, appear above nodes instead of within nodes, and have color matching
the corresponding node color

--- a/app/app.css
+++ b/app/app.css
@@ -306,6 +306,11 @@ md-menu-content {
     bottom: 75% !important;
 }
 
+/* Custom fix for the labels in the filter input boxes so that they maintain position if the user removes all the contents in the input box*/
+md-input-container:not(.md-input-focused) label:not(.md-no-float):not(.md-container-ignore) {
+    transform: translate3d(0, 6px, 0) scale(0.75) !important;
+}
+
 td,
 th {
     padding: 5px;
